# meal_planner_bot

./: .env.example  .gitignore  README.md  pyproject.toml
data/: meal_planner_bot.db
deploy/systemd/: meal_planner_bot.service
scripts/: bootstrap_vps.sh  deploy_update.sh
src/meal_planner_bot/: __main__.py  access.py  config.py  database.py  dish_catalog.py  dishes.py  main.py  priority_reminders.py  seed_dishes.py  settings_repository.py
src/meal_planner_bot/handlers/: __init__.py  common.py
